# gritty

./: .gitignore  Cargo.toml  Dioxus.toml  input.css  package-lock.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
docs/: PRD.md
docs/superpowers/plans/: 2026-04-29-gritty-editor.md
docs/superpowers/specs/: 2026-04-29-gritty-editor-design.md
src/: canvas.rs  color.rs  export.rs  import.rs  main.rs  state.rs
src/components/: left_panel.rs  mod.rs  right_panel.rs  status_bar.rs  timeline.rs  top_bar.rs
