[package]
name = "gritty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gritty"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d", "HtmlCanvasElement",
    "HtmlInputElement", "HtmlAnchorElement",
    "MouseEvent", "Window", "Document",
    "Element", "HtmlElement", "EventTarget",
    "ImageData", "FileList", "File",
    "Blob", "BlobPropertyBag", "Url",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = "s"
lto = true
